# Code-Agent

./: .gitignore  DESIGN_SYSTEM.md  README.md  railway-deployment-guide.md
.kiro/specs/backend-audit-optimization/: design.md  requirements.md
.kiro/specs/jwt-auth-system/: design.md  requirements.md  tasks.md
.kiro/specs/sidebar-improvements/: design.md  requirements.md  tasks.md
backend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  check_data.py  check_db.py  docker-compose.yml  pyproject.toml  remove_docstrings.py  run_audit.py
backend/alembic/: env.py
backend/alembic/versions/: 27ec6e88d877_create_conversations_and_messages.py  581e9aaab449_add_jwt_token_tables_and_update_users.py  711031cda9a0_add_users_table.py  9b6d6c2a1f5e_add_wordpress_sites_table.py  e278432054b5_create_oauth_tokens_table.py
backend/app/: main.py  scraper.py  tools.py
backend/app/agent/: __init__.py  circuit_breaker.py  config.py  errors.py  graph.py  llm_factory.py  models.py  prompts.py  retry.py  schema_context.py  state.py  tools.py  tools_schema.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  drive.py  ide.py  menus.py  scrape.py  wp_sites.py
backend/app/audit/: code_analyzer.py  dependency_analyzer.py  logger.py  models.py
backend/app/core/: config.py  crypto.py  database.py  security.py
backend/app/models/: __init__.py  chat.py  token.py  user.py  wordpress_site.py
backend/app/schemas/: auth.py  chat.py  drive.py  ide.py  menus.py  wp_sites.py
backend/app/services/: __init__.py  chat.py  conversation.py  google_drive.py  supabase_storage.py  token_service.py  wordpress.py
backend/docs/: agent-configuration.md  audit-summary.md  chat-auth-integration.md  cleanup-summary.md  endpoint-validation.md  endpoints.md  mcp.md  optimization-progress.md  python-3.14-upgrade.md
backend/tests/: __init__.py  conftest.py
backend/tests/audit/: __init__.py
frontend/: .dockerignore  Dockerfile  app.js  ide.html  index.html  nginx.conf  package-lock.json  package.json  style.css  vite.config.ts
frontend/css/: chat.css  components.css  ide.css  layout.css  tokens.css
frontend/js/: api.js  chat.js  ide.js  utils.js
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: chat-input.tsx  chat-message.tsx  model-selector.tsx  tool-call-badge.tsx  welcome-screen.tsx
frontend/src/components/drive/: connectors-panel.tsx  drive-file-list.tsx
frontend/src/components/ide/: create-modal.tsx  editor-tabs.tsx  file-tree.tsx  ide-header.tsx
frontend/src/components/layout/: app-header.tsx  app-sidebar.tsx  root-layout.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  sidebar.tsx
frontend/src/hooks/: use-sidebar-shortcuts.ts  use-wp-cli-discover.ts
frontend/src/lib/: axios.ts
frontend/src/pages/: chat-page.tsx  ide-page.tsx  login-page.tsx  not-found-page.tsx  profile-page.tsx  signup-page.tsx
frontend/src/stores/: chat-store.ts  settings-store.ts  sidebar-store.ts  user-store.ts
frontend/src/types/: index.ts
frontendReact/: .env.example  vite.config.ts
frontendReact/src/: App.tsx  index.css
frontendReact/src/components/chat/: tool-call-badge.tsx  tool-call-modal.tsx  typing-indicator.tsx
frontendReact/src/components/drive/: connectors-panel.tsx  drive-file-list.tsx
frontendReact/src/components/ide/: code-editor.tsx  ide-sidebar.tsx  ide-welcome.tsx
frontendReact/src/components/layout/: app-header.tsx  app-sidebar.tsx  root-layout.tsx
frontendReact/src/components/ui/: sidebar.tsx
frontendReact/src/lib/: axios.ts
frontendReact/src/lib/validations/: auth.ts
frontendReact/src/pages/: chat-page.tsx  login-page.tsx
frontendReact/src/stores/: auth-store.ts  chat-store.ts  ide-store.ts  settings-store.ts  sidebar-store.ts  user-store.ts
frontendReact/src/types/: index.ts
